rpi5/syncthing/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: syncthing
  serviceName: syncthing
  template:
    metadata:
      name: syncthing
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: lscr.io/linuxserver/syncthing:2.1.6@sha256:8a381a5a11225475cc4a14ad4fee7c627fdc4fa5804fe3a34febe3aeda9f4e23
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8384
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          hostPath:
            path: /data
      securityContext:
        fsGroup: 3002
      nodeSelector:
        kubernetes.io/hostname: odroid-h4
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
