rpi5/syncthing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: syncthing
spec:
  selector:
    app: syncthing
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
